# baidupan

./: README.md  datafile.txt  pyproject.toml  read.py
Python_Study_Guide/: Person.py  brain  classtools.py  ex01.py  ex02.py  ex03.py  firstClass.py  formats.py  threenames.py
